--- a/_posts/2022-09-04-sinhagad.md
+++ b/_posts/2022-09-04-sinhagad.md
@@ -10,11 +10,12 @@ published: false
 # Sinhagad fort
 
 ![view point](https://raw.githubusercontent.com/kevy-vinu/naran.ga/master/assets/Sinhagard1.jpeg)
+
 Sinhagard is a historical place of tranquillity and peace. It's situated in **Pune,** in the **State of Maharashtra.** Which is also called **The gateway of India.** If you want to know more about history, culture and tourism. You can check out this link
 
 [https://en.m.wikipedia.org/wiki/Sinhagad](https://en.m.wikipedia.org/wiki/Sinhagad)
 
-![PXL_20220822_054228151-01.jpeg](Sinhagad%20fort%205d48a96162964b80ab504d27a0738fa9/PXL_20220822_054228151-01.jpeg)
+![walking](https://raw.githubusercontent.com/kevy-vinu/naran.ga/master/assets/Sinhagard2.jpeg)
 
 How to reach sinhagad?
 
@@ -41,52 +42,40 @@ There are umpteen things to do in sinhagad [.](http://sinhagad.Here) Here is a l
 
 **Kalayan Darwaza**
 
-![PXL_20220822_054521607-01.jpeg](Sinhagad%20fort%205d48a96162964b80ab504d27a0738fa9/PXL_20220822_054521607-01.jpeg)
+![kalayan](https://raw.githubusercontent.com/kevy-vinu/naran.ga/master/assets/Sinhagard3.jpeg)
 
 **Pune Darwaza**
 
-![PXL_20220822_055052969-01.jpeg](Sinhagad%20fort%205d48a96162964b80ab504d27a0738fa9/PXL_20220822_055052969-01.jpeg)
+![pune](https://raw.githubusercontent.com/kevy-vinu/naran.ga/master/assets/Pune.jpeg)
 
 . you'll find local people selling berries,  raw mango slices, and cucumber pieces with chilli powder and salt. Some hawkers sell steamed corns and ground nuts
 
-![PXL_20220822_064456653-01.jpeg](Sinhagad%20fort%205d48a96162964b80ab504d27a0738fa9/PXL_20220822_064456653-01.jpeg)
+![mangoes](https://raw.githubusercontent.com/kevy-vinu/naran.ga/master/assets/Sinhagad5.jpeg)
 
-- 
-- 
+![corn](https://raw.githubusercontent.com/kevy-vinu/naran.ga/master/assets/6.jpeg)
 
-![PXL_20220822_064414111.PORTRAIT-01.jpeg](Sinhagad%20fort%205d48a96162964b80ab504d27a0738fa9/PXL_20220822_064414111.PORTRAIT-01.jpeg)
+![groundnuts](https://raw.githubusercontent.com/kevy-vinu/naran.ga/master/assets/7.jpeg)
 
-![PXL_20220822_101857600-01.jpeg](Sinhagad%20fort%205d48a96162964b80ab504d27a0738fa9/PXL_20220822_101857600-01.jpeg)
-
-![PXL_20220822_101835917-01.jpeg](Sinhagad%20fort%205d48a96162964b80ab504d27a0738fa9/PXL_20220822_101835917-01.jpeg)
-
-![PXL_20220822_064325309-01.jpeg](Sinhagad%20fort%205d48a96162964b80ab504d27a0738fa9/PXL_20220822_064325309-01.jpeg)
 
 . **** **Tanhaji  Malusare Smruti Mandap**
 
-![PXL_20220822_065955987-01.jpeg](Sinhagad%20fort%205d48a96162964b80ab504d27a0738fa9/PXL_20220822_065955987-01.jpeg)
+![tanhaji](https://raw.githubusercontent.com/kevy-vinu/naran.ga/master/assets/8.jpeg)
 
-![PXL_20220822_065637391.PORTRAIT-01.jpeg](Sinhagad%20fort%205d48a96162964b80ab504d27a0738fa9/PXL_20220822_065637391.PORTRAIT-01.jpeg)
+![smrutimandap](https://raw.githubusercontent.com/kevy-vinu/naran.ga/master/assets/9.jpeg)
 
-![PXL_20220822_065752066-01.jpeg](Sinhagad%20fort%205d48a96162964b80ab504d27a0738fa9/PXL_20220822_065752066-01.jpeg)
-
-![PXL_20220822_065918008-01.jpeg](Sinhagad%20fort%205d48a96162964b80ab504d27a0738fa9/PXL_20220822_065918008-01.jpeg)
 
 . Kondhaneshwar Shiv Mandir
 
-![PXL_20220822_072036256-01.jpeg](Sinhagad%20fort%205d48a96162964b80ab504d27a0738fa9/PXL_20220822_072036256-01.jpeg)
+![khondaneshwar](https://raw.githubusercontent.com/kevy-vinu/naran.ga/master/assets/10.jpeg)
 
 **. Sun Rise point**
 
 . At this point where I and my husband spend a lot. Because this is the most hushed place in the fort. We loved this place.
 
-![PXL_20220822_093549780-01.jpeg](Sinhagad%20fort%205d48a96162964b80ab504d27a0738fa9/PXL_20220822_093549780-01.jpeg)
+![kevy](https://raw.githubusercontent.com/kevy-vinu/naran.ga/master/assets/11.jpeg)
 
-![PXL_20220822_093648315-01.jpeg](Sinhagad%20fort%205d48a96162964b80ab504d27a0738fa9/PXL_20220822_093648315-01.jpeg)
+![me](https://raw.githubusercontent.com/kevy-vinu/naran.ga/master/assets/12.jpeg)
 
-![PXL_20220827_123248377-02.jpeg](Sinhagad%20fort%205d48a96162964b80ab504d27a0738fa9/PXL_20220827_123248377-02.jpeg)
-
-![PXL_20220827_130634163-01.jpeg](Sinhagad%20fort%205d48a96162964b80ab504d27a0738fa9/PXL_20220827_130634163-01.jpeg)
 
 **Tips while visiting Sinhagad.**
 
@@ -102,6 +91,6 @@ There are umpteen things to do in sinhagad [.](http://sinhagad.Here) Here is a l
 
 *Thanks for reading…..*
 
-![PXL_20220827_130115201-01.jpeg](Sinhagad%20fort%205d48a96162964b80ab504d27a0738fa9/PXL_20220827_130115201-01.jpeg)
+![we](  https://raw.githubusercontent.com/kevy-vinu/naran.ga/master/assets/13.jpeg)
 
 *Love meditate nature!*
