--- a/_posts/2022-09-04-sinhagad.md
+++ b/_posts/2022-09-04-sinhagad.md
@@ -5,7 +5,7 @@ author: "Keerthana M S"
 date: 2022-09-04
 categories: [ story ]
 comments: true
-published: false
+published: true
 ---
 # Sinhagad fort
 
