--- a/_posts/2022-09-04-sinhagad.md
+++ b/_posts/2022-09-04-sinhagad.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Coming Soon!"
+title:  "Sinhagad Trip"
 author: "Keerthana M S"
 date: 2022-09-04
 categories: [ story ]
@@ -57,18 +57,18 @@ There are umpteen things to do in sinhagad [.](http://sinhagad.Here) Here is a l
 ![groundnuts](https://raw.githubusercontent.com/kevy-vinu/naran.ga/master/assets/7.jpeg)
 
 
-. **** **Tanhaji  Malusare Smruti Mandap**
+**Tanhaji  Malusare Smruti Mandap**
 
 ![tanhaji](https://raw.githubusercontent.com/kevy-vinu/naran.ga/master/assets/8.jpeg)
 
 ![smrutimandap](https://raw.githubusercontent.com/kevy-vinu/naran.ga/master/assets/9.jpeg)
 
 
-. Kondhaneshwar Shiv Mandir
+**Kondhaneshwar Shiv Mandir**
 
 ![khondaneshwar](https://raw.githubusercontent.com/kevy-vinu/naran.ga/master/assets/10.jpeg)
 
-**. Sun Rise point**
+**Sun Rise point**
 
 . At this point where I and my husband spend a lot. Because this is the most hushed place in the fort. We loved this place.
 
