--- a/_posts/2022-09-14-dalfry.md
+++ b/_posts/2022-09-14-dalfry.md
@@ -1,3 +1,4 @@
+---
 layout: post
 title:  "dal fry/dal tadak!"
 title:  "dal fry/dal tadak"
@@ -8,3 +9,75 @@ comments: true
 published: false
 ---
 # dal fry
+![dal fry](https://raw.githubusercontent.com/kevy-vinu/naran.ga/master/assets/1.jpeg)
+
+# ***Ingredients***
+
+- *Masoor dal — 1/2 cup*
+- *Tur dal — 1/2 cup*
+- *Medium-sized onion — 1*
+- *Tomato — 1*
+- *Green chilli — 6*
+- *Ginger — 4 inch*
+- *Garlic — 10 cloves*
+- *Chilli flakes — 1 tsp (optional)*
+- *Jeera — 1 tsp*
+- Asafoetida — 1/2 tsp
+- *Turmeric powder — 1 tsp*
+- *Chilli powder — 1 tsp*
+- *Coriander powder — 1 tsp*
+- *Coriander leaves*
+- *Curry leaves*
+- *Ghee — 4 tsp*
+
+   
+
+![dal](https://raw.githubusercontent.com/kevy-vinu/naran.ga/master/assets/2.jpeg)
+
+# ***How to make?***
+
+1. Soak the dal in normal water for 30 minutes. Here I am taking masoor dal and tur [dal. You](http://dal.You) can use your favourite varieties.
+
+![soakdal](https://raw.githubusercontent.com/kevy-vinu/naran.ga/master/assets/3.jpeg)
+
+1. After 30 minutes, add dal, a pinch of turmeric powder, salt and 2 cups of water into a pressure cooker. Pressure cook it for high flame for about four whistles. After Four whistles lower the flame for 5 minutes.
+
+![cookeddal](https://raw.githubusercontent.com/kevy-vinu/naran.ga/master/assets/4%20(2).jpeg)
+
+1. Take a pan/kadhai here I am using a clay pot. Heat ghee (you can also use coconut oil/sunflower oil) and add mustard seeds. When they start to splutter, add curry leaves, jeera, asafoetida, and chilli flakes.
+
+![pot](https://raw.githubusercontent.com/kevy-vinu/naran.ga/master/assets/4%20(2).jpeg)
+
+1. Add chopped garlic, green chilli and ginger and saute until the smell dissolve. add chopped onion.
+
+![garlic](https://raw.githubusercontent.com/kevy-vinu/naran.ga/master/assets/6%20(1).jpeg)
+
+![chilli](https://raw.githubusercontent.com/kevy-vinu/naran.ga/master/assets/7%20(1).jpeg)
+
+![onion](https://raw.githubusercontent.com/kevy-vinu/naran.ga/master/assets/8%20(1).jpeg)
+
+1. Further, add coriander powder, and chilli powder and saute until the raw smell dissolve.
+
+![redchilli](https://raw.githubusercontent.com/kevy-vinu/naran.ga/master/assets/8%20(1).jpeg)
+
+![coriander](https://raw.githubusercontent.com/kevy-vinu/naran.ga/master/assets/11%20(1).jpeg)
+
+1. Add chopped tomato.
+
+![tomato](https://raw.githubusercontent.com/kevy-vinu/naran.ga/master/assets/12%20(1).jpeg)
+
+1. Add cooked dal and required salt.
+
+![dal](https://raw.githubusercontent.com/kevy-vinu/naran.ga/master/assets/13%20(1).jpeg)
+
+1. Serve hot with chapati, and rice.
+
+![chapti](https://raw.githubusercontent.com/kevy-vinu/naran.ga/master/assets/14.jpeg)
+
+![finallook](https://raw.githubusercontent.com/kevy-vinu/naran.ga/master/assets/15.jpeg)
+
+If you have any suggestions/ doubts comment below.
+
+Thanks for reading!
+
+Love meditate nature!
