--- a/_posts/2022-09-14-dalfry.md
+++ b/_posts/2022-09-14-dalfry.md
@@ -46,7 +46,7 @@ published: false
 
 1. Take a pan/kadhai here I am using a clay pot. Heat ghee (you can also use coconut oil/sunflower oil) and add mustard seeds. When they start to splutter, add curry leaves, jeera, asafoetida, and chilli flakes.
 
-![pot](https://raw.githubusercontent.com/kevy-vinu/naran.ga/master/assets/4%20(2).jpeg)
+![pot](https://raw.githubusercontent.com/kevy-vinu/naran.ga/master/assets/5.jpeg)
 
 1. Add chopped garlic, green chilli and ginger and saute until the smell dissolve. add chopped onion.
 
@@ -58,7 +58,7 @@ published: false
 
 1. Further, add coriander powder, and chilli powder and saute until the raw smell dissolve.
 
-![redchilli](https://raw.githubusercontent.com/kevy-vinu/naran.ga/master/assets/8%20(1).jpeg)
+![redchilli](https://raw.githubusercontent.com/kevy-vinu/naran.ga/master/assets/10%20(1).jpeg)
 
 ![coriander](https://raw.githubusercontent.com/kevy-vinu/naran.ga/master/assets/11%20(1).jpeg)
 
