--- a/_posts/2022-09-14-dalfry.md
+++ b/_posts/2022-09-14-dalfry.md
@@ -3,10 +3,10 @@ layout: post
 title:  "dal fry/dal tadak!"
 title:  "dal fry/dal tadak"
 author: "Keerthana M S"
-date: 2022-09-04
+date: 2022-09-14
 categories: [ post]
 comments: true
-published: false
+published: true
 ---
 # dal fry
 ![dal fry](https://raw.githubusercontent.com/kevy-vinu/naran.ga/master/assets/1.jpeg)
