--- a/_posts/2022-09-14-dalfry.md
+++ b/_posts/2022-09-14-dalfry.md
@@ -1,14 +1,13 @@
 ---
 layout: post
-title:  "dal fry/dal tadak!"
-title:  "dal fry/dal tadak"
+title:  "Dal fry/Dal tadak!"
 author: "Keerthana M S"
 date: 2022-09-14
 categories: [ post]
 comments: true
 published: true
 ---
-# dal fry
+# Dal fry
 ![dal fry](https://raw.githubusercontent.com/kevy-vinu/naran.ga/master/assets/1.jpeg)
 
 # ***Ingredients***
@@ -40,15 +39,15 @@ published: true
 
 ![soakdal](https://raw.githubusercontent.com/kevy-vinu/naran.ga/master/assets/3.jpeg)
 
-1. After 30 minutes, add dal, a pinch of turmeric powder, salt and 2 cups of water into a pressure cooker. Pressure cook it for high flame for about four whistles. After Four whistles lower the flame for 5 minutes.
+2. After 30 minutes, add dal, a pinch of turmeric powder, salt and 2 cups of water into a pressure cooker. Pressure cook it for high flame for about four whistles. After Four whistles lower the flame for 5 minutes.
 
 ![cookeddal](https://raw.githubusercontent.com/kevy-vinu/naran.ga/master/assets/4%20(2).jpeg)
 
-1. Take a pan/kadhai here I am using a clay pot. Heat ghee (you can also use coconut oil/sunflower oil) and add mustard seeds. When they start to splutter, add curry leaves, jeera, asafoetida, and chilli flakes.
+3. Take a pan/kadhai here I am using a clay pot. Heat ghee (you can also use coconut oil/sunflower oil) and add mustard seeds. When they start to splutter, add curry leaves, jeera, asafoetida, and chilli flakes.
 
 ![pot](https://raw.githubusercontent.com/kevy-vinu/naran.ga/master/assets/5.jpeg)
 
-1. Add chopped garlic, green chilli and ginger and saute until the smell dissolve. add chopped onion.
+4. Add chopped garlic, green chilli and ginger and saute until the smell dissolve. add chopped onion.
 
 ![garlic](https://raw.githubusercontent.com/kevy-vinu/naran.ga/master/assets/6%20(1).jpeg)
 
@@ -56,13 +55,13 @@ published: true
 
 ![onion](https://raw.githubusercontent.com/kevy-vinu/naran.ga/master/assets/8%20(1).jpeg)
 
-1. Further, add coriander powder, and chilli powder and saute until the raw smell dissolve.
+5. Further, add coriander powder, and chilli powder and saute until the raw smell dissolve.
 
 ![redchilli](https://raw.githubusercontent.com/kevy-vinu/naran.ga/master/assets/10%20(1).jpeg)
 
 ![coriander](https://raw.githubusercontent.com/kevy-vinu/naran.ga/master/assets/11%20(1).jpeg)
 
-1. Add chopped tomato.
+6. Add chopped tomato.
 
 ![tomato](https://raw.githubusercontent.com/kevy-vinu/naran.ga/master/assets/12%20(1).jpeg)
 
@@ -70,7 +69,7 @@ published: true
 
 ![dal](https://raw.githubusercontent.com/kevy-vinu/naran.ga/master/assets/13%20(1).jpeg)
 
-1. Serve hot with chapati, and rice.
+7. Serve hot with chapati, and rice.
 
 ![chapti](https://raw.githubusercontent.com/kevy-vinu/naran.ga/master/assets/14.jpeg)
 
