--- a/_posts/2022-09-14-dalfry.md
+++ b/_posts/2022-09-14-dalfry.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Dal fry/Dal tadak!"
+title:  "Dal fry/Dal tadak"
 author: "Keerthana M S"
 date: 2022-09-14
 categories: [ post]
